final wk6
