# routes/index.js
@@ -9,18 +9,19 @@ router.get('/', (req, res) => {
 });
 
 router.use('/cities', require('./cities'));
-//router.use('/users', require('./users'));
 router.use('/countries', require('./countries'));
+router.use('/population', require('./population'));
+router.use('/climates', require('./climates'));
 
-// router.get('/login', passport.authenticate('github'), (req, res) => {});
+router.get('/login', passport.authenticate('github'), (req, res) => {});
 
-// router.get('/logout', function(req, res, next) {
-//     req.logout(function(err) {
-//         if (err) {
-//             return next(err);
-//         }
-//         res.redirect('/');
-//     });
-// });
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) {
+            return next(err);
+        }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
